--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.0",
+    "framer-motion": "^10.16.4",
+    "react-icons": "^4.9.0",
+    "react-paginate": "^8.2.0",
+    "react-hook-form": "^7.47.0",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.1"
